# roly_portafolio

./: .gitignore
backend/: .env.example  .env.local.example  .env.production.example  .env.railway.example  .gitignore  Procfile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  forms.py  router.py
backend/app/api/routes/: auth.py  contact_messages.py  experiences.py  projects.py  technologies.py  users.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  contact_messages.py  experiences.py  health.py  projects.py  technologies.py  users.py
backend/app/core/: application.py  config.py
backend/app/database/: connection.py  session.py
backend/app/db/: bootstrap.py  models.py  session.py
backend/app/models/: __init__.py  association.py  contact_message.py  experience.py  project.py  project_image.py  technology.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py  contact_message.py  experience.py  project.py  project_image.py  technology.py  user.py
backend/app/services/: auth_service.py  contact_messages_service.py  database_service.py  experiences_service.py  projects_service.py  technologies_service.py  users_service.py
backend/app/utils/: asset_paths.py
frontend/: .env.example  README.md  index.html  package-lock.json
frontend/src/app/: App.jsx  AuthProvider.jsx  router.jsx
frontend/src/constants/: adminSections.js  navigation.js
frontend/src/data/: portfolio.js
frontend/src/hooks/: useAuth.js  useHomeContent.js
(+53 files in other folders)
